# llm_job_fit_analyzer

./: .dockerignore  .gitignore  Containerfile  Containerfile.demo  README.md  app.py  prompt.example.txt  pyproject.toml  uv.toml
.forgejo/: pulll_request_template.md
.forgejo/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.forgejo/workflows/: deploy.yml  lint_test.yml
.streamlit/: config.toml
docs/plans/: demo_launch_plan.md  refactor_plan.md
docs/reviews/: demo_app_review.md
mock_build/: app.py  build_html.py  demo_data.json  index.html  mock_app.py
scripts/: brand_favicon.py  capture_demo.py  capture_demo_container.sh  record_demo.py  record_demo_container.sh  run_container.sh  sync_flow_diagram.py
src/config/: settings.py
src/llm/: base.py  gemini.py  ollama.py  openai_compat.py
src/scrapers/: ecmwf_scraper.py  epic_scraper.py  google_scraper.py
src/services/: recorder.py  scoring.py  scraping.py
static/: flow.mmd
tests/unit/: test_app_helpers.py  test_flow_diagram_sync.py  test_llm_providers.py  test_recorder.py  test_scoring.py  test_scrapers.py  test_settings.py
